<resources>
    <string name="app_name">YouVerify To-Do</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Bottom Menu Titles -->
    <string name="home">Home</string>
    <string name="alarms">alarms</string>
    <string name="calendar">calendar</string>
    <string name="apps">apps</string>

    <!-- Priority Titles -->
    <string name="priority_hdr">Priority</string>
    <string name="low_priority">Low</string>
    <string name="mid_priority">Medium</string>
    <string name="high_priority">High</string>

    <!-- Homescreen Text-->
    <string name="homescreen_hdr">Hello!</string>
    <string name="homescreen_subtitle">Let\'s be productive today</string>
    <string name="homescreen_date">Today, </string>

    <!-- Create New task Text-->
    <string name="newtask_hdr">Create new task</string>
    <string name="taskname_fld">Task name</string>
    <string name="taskdescription_fld">Task description</string>
    <string name="date">Date</string>
    <string name="alarm">Alarm</string>
    <string name="remind_me">Remind me</string>

    <!-- Category Titles-->
    <string name="category_hdr">Category</string>
    <string name="work_cat">Work</string>
    <string name="family_cat">Family</string>
    <string name="school_cat">School</string>
    <string name="calendar_hdr">Calendar</string>
    <string name="mock_date">Tuesday 23, February</string>
    <string name="mock_time">2 Hours</string>
    <string name="mock_time_raw">11:00</string>
    <string name="no_task_msg">No Tasks Yet</string>
    <string name="channel_name">task_notif_channel</string>

</resources>